Don't remove consecutive spaces in SRT subtitles

The Kdenlive UI allows you to add multiple spaces between words in
subtitles. This displays correctly in the UI and is preserved when
saving the SRT file, but the spaces are removed when opening the SRT
file.

Changing line.simplified() to line.trimmed() seems to fix the round-trip
issue.

BUG: 457878